...
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>
...
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/compliance_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp">

        <RelativeLayout
            android:id="@+id/compliance_inspection_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/date_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/date_hint"
                    android:inputType="none"
...
                    android:padding="10dp"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/finding_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/date_input">

                <EditText
                    android:id="@+id/finding"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:hint="@string/prompt_finding"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textMultiLine"
...
                    android:padding="10dp"
                    android:singleLine="false" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/description_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/finding_input">

                <EditText
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/prompt_comment"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textMultiLine"
...
                    android:singleLine="false"
                    android:layout_margin="10dp"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Spinner
                android:id="@+id/status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/description_input"
                android:layout_margin="10dp"
                android:padding="10dp"
                android:spinnerMode="dropdown"/>

            <include layout="@layout/content_compliance_inspection" />

            <ImageView
                android:id="@+id/compliance_image"
                android:layout_width="fill_parent"
                android:layout_height="250dp"
                android:layout_centerInParent="true"
                android:layout_below="@+id/status"
                android:src="@drawable/ic_image_blue_24dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:padding="10dp" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/compliance_image"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="@dimen/fab_margin"
...
